--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "gsap": "^3.11.3",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^3",
     "three": "0.124.0",
     "vite": "^3.2.3"
   }
