--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.4",
+    "fastclick": "^1.0.6",
+    "pinia": "^2.0.33",
+    "pinia-plugin-persist": "^1.0.0",
     "stats.js": "^0.17.0",
     "vue": "^3.2.41"
   },
