--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.0.33",
     "pinia-plugin-persist": "^1.0.0",
     "stats.js": "^0.17.0",
+    "swiper": "^9.1.1",
     "vue": "^3.2.41"
   },
   "devDependencies": {
